keep homefragment,start momentfragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="contact">通讯录</string>
     <string name="moment">代购圈</string>
     <string name="user">我</string>
+    <string name="scan">扫一扫</string>
 </resources>
